--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^2.12.0",
     "final-form": "^4.18.7",
     "react": "^16.13.1",
+    "react-date-range": "^1.0.3",
     "react-dom": "^16.12.0",
     "react-final-form": "^6.3.5",
     "react-pdf": "^4.1.0",
