--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.12.0",
     "final-form": "^4.18.7",
+    "js-file-download": "^0.4.11",
     "react": "^16.13.1",
     "react-date-range": "^1.0.3",
     "react-dom": "^16.12.0",
